(lang dune 2.8)

(name Bench)

(generate_opam_files true)

(package
 (name Test)
 (synopsis "Test")
 (depends
  (ocaml
   (= 4.14.1))))

(package
 (name TCFGParser)
 (synopsis "TCFGParser")
 (depends
  (ocaml
   (= 4.14.1))
  dune
  ppx_jane
  ppx_deriving
  ppx_import
  core
  sedlex
  ocaml-lsp-server
  ocamlformat))

(package
 (name CoqParser)
 (synopsis "CoqParser")
 (depends
  (ocaml
   (= 4.14.1))))
