(library
 (name TCFGParser)
 (public_name TCFGParser)
 (modules
  CParser
  IntVPG
  Unmarshall
  CoqParseTree
  CoqVPG
  Coq_parser
  Extract
  TCFGParseTree
  GrammarTools
  VMarshall
  BuildPDA
  IntDict
  ExportPDA
  TCFG
  Utils
  SimpleForm
  Translation
  DeSugRe)
 (preprocess
  (staged_pps ppx_import ppx_deriving.show ppx_sexp_conv ppx_compare))
 (libraries CoqParser core ppx_import))
